# gemini-examples

./: .flake8  .gitignore  .mypy.ini  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  buildfile.m  ci.cmake  codemeta.json  libraries.json  pyproject.toml  setup.m
ci/: CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  ci.cmake  download_extract.cmake  parse_nml.cmake
ci/GDI_periodic_lowres/: config.m
ci/GDI_periodic_lowres_CI/: Efield.m
ci/KHI_periodic_lowres/: efield.m  perturb_efield.py
ci/KHI_periodic_lowres_CI/: config.m  perturb.m
ci/arcs/: config.nml
ci/cusp2D_eq/: config.nml
ci/cusp_softprecip2D_Neu_CI/: config.nml
ci/cusp_softprecip3D_CI/: model_setup_visions23D.m
ci/daily/KHI_periodic_lowres/: config.nml
ci/daily/cusp_softprecip2D_Dirich_CI/: config.nml
ci/daily/cusp_softprecip2D_Neu_CI/: config.nml
ci/daily/cusp_softprecip3D_CI/: config.nml
ci/daily/tohoku20112D_medres_2Dneu/: config.nml  makedneuframes_tohoku.m
ci/daily/tohoku20112D_medres_axineu_CI/: config.nml
ci/daily/tohoku20113D_lowres_3Dneu/: config.nml
ci/daily/tohoku20113D_lowres_3Dneu_CI/: config.nml
ci/daily/tohoku20113D_lowres_axineu/: config.nml
ci/daily/tohoku20113D_lowres_axineu_CI/: config.nml  model_setup_interp_tohoku20113D.m
ci/equilibrium/GDI_KHI_eq/: config.nml
ci/equilibrium/arcs_eq/: config.nml
ci/equilibrium/cusp2d_eq/: config.nml
ci/equilibrium/cusp3d_eq/: config.nml
ci/equilibrium/tohoku20113D_eq/: config.ini
ci/equilibrium/tohoku2d_eq/: config.nml
ci/equilibrium/tohoku3d_eq/: README.md  config.nml
ci/hourly/GDI_periodic_lowres/: config.nml
ci/hourly/arcs/: Efield_BCs_angle_wide.m  config.nml  particles_BCs_angle_wide.m
ci/hourly/arcs/archive/: particles_BCs_angle_wide.m
ci/todo/: README.md
ci/todo/tohoku20112D_medres_2Dneu/: magcalc_setup.m
ci/todo/tohoku20113D_lowres_3Dneu_CI/: config.nml
ci/todo/tohoku20113D_lowres_axineu_CI/: magcalc_setup.m
ci/tohoku20112D_medres_2Dneu_CI/: config.nml
ci/tohoku20112D_medres_axineu_CI/: config.nml
ci/tohoku20113D_eq/: config.nml
ci/tohoku20113D_lowres_axineu_CI/: config.nml
cmake/: EquilSetup.cmake  GeminiCompare.cmake  GeminiPackage.cmake  GeminiPlot.cmake  GeminiRun.cmake  InputSetup.cmake  MatlabTest.cmake  ModelSetup.cmake  archive.cmake  download_eq.cmake  download_extract.cmake  download_input.cmake  download_ref.cmake  find_gemini.cmake  gemini3d_url.json  get_plan_cpu.cmake  get_simroot.cmake  libraries.cmake  libraries.json  matlab.cmake  options.cmake  parse_nml.cmake  plot_archive.cmake  python.cmake  reference_url.json  upload.cmake  zip.cmake
cmake/Modules/: FindGemini3D.cmake
init/2DSTEVE/: Efield_BCs_2DSTEVE.m  J_BCs_2DSTEVE.m  README.md  config.ini  config.nml  model_setup_interp_2DSTEVE.m  model_setup_interp_2DSTEVE_EW.m  particles_BCs_2DSTEVE.m
init/3DnonEFL/: Efield_BCs_current.m  model_setup_interp_3DnonEFL.m  particles_BCs_current.m
init/ALFs/: config.nml  fac_said.m
init/ALFs_STEVE/: calc_Epar.m  calc_Epar.py  config.nml  fac_said.m  fac_said.py  pot_said.py
init/Aether/: Efield_BCs_cusp.m  Efield_BCs_discrete.m  config.ini  model_setup_interp_Aether.m  particles_BCs_cusp.m  particles_BCs_discrete.m
init/Apr2024_eclipse_3D/: config.nml  config.nml.staging
init/Apr2024_eclipse_3D_eq/: config.nml  config.nml.datamask  config.nml.staging
init/CEDAR2024/: README.md  visualization.py
init/CGCAM_NZ/: config.nml  config_dist.nml  config_eq.nml
init/EIA_eq/: config.ini  model_setup_global_eq.m
init/EIAwinds/: config.nml
init/ESF/: config.nml  model_setup_interp_ESF.m  model_setup_perturbgaussian_ESF.m  model_setup_perturbnoise_ESF.m
init/ESF_dneu/: config.nml  model_setup_interp_ESF.m  model_setup_perturbgaussian_ESF.m  model_setup_perturbnoise_ESF.m
init/ESF_eq/: config.nml  model_setup_ESF.m
init/ESF_eq_large/: config.nml  model_setup_ESF.m
init/ESF_eq_tall/: config.ini  config.nml  model_setup_ESF.m
init/ESF_periodic/: README.md  visualization.py
init/ESF_tall/: config.ini  config.nml  model_setup_perturbgaussian_ESF.m  model_setup_perturbnoise_ESF.m
init/GDI_Eregion/: README.md  simple_plot.py
init/GDI_Eregion_periodic_lowres/: README.md  config.nml  perturb.m
init/GDI_MR/: config.nml  perturb.m  perturb.py  perturb.singlemode.py
init/GDI_RISR/: config.efield.nml  config.interp.nml  config.nml  config.staging.nml  model_reconstruct.py  pertub_file.py  perturb.py  perturb_file.py  perturb_square.py  readme.md
init/GDI_RISR_eq/: config.nml
init/GDI_fieldresolved/: config.nml  perturb.py
init/GDI_periodic_LL/: Efield_BCs_GDI.m  model_setup_interp_GDI.m  model_setup_perturb_GDI.m
init/GDI_periodic_highres/: Efield_BCs_GDI.m  model_setup_interp_GDI.m  model_setup_perturb_GDI.m
init/GDI_periodic_highres_large/: Efield_BCs_GDI.m  model_setup_interp_GDI.m  model_setup_perturb_GDI.m
init/GDI_periodic_lowres/: README.md  config.m  config.nml  perturb.m  perturb.py
init/GDI_periodic_lowres_CI/: README.md  perturb.m
init/GDI_periodic_lowres_lagrangian/: Efield.m  README.md  config.m  config.nml  perturb.m
init/GDI_periodic_lowres_lagrangian_pressure/: Efield.m  config.m  config.nml  perturb.m  perturb.py
init/GDI_periodic_medres/: Efield_BCs_GDI.m  README.md  model_setup_interp_GDI.m  model_setup_perturb_GDI.m
init/GDI_periodic_round/: Efield_BCs_GDI.m  config.ini  model_setup_interp_GDI.m  model_setup_perturb_GDI.m
init/GDI_pressure/: config.nml
init/GDI_round/: config.nml  perturb.py
init/ICI2_glow/: Efield_BCs_ICI2.m  model_setup_interp_ICI2.m  particles_BCs_ICI2.m
init/KHI_2024_May_Storm/: README.md  config.nml  perturb_efield.py
init/KHI_Andres/: Efield_BCs_KHI.m  model_setup_interp_KHI.m  model_setup_perturb_KHI.m
init/KHI_Andres_eq/: model_setup_KHI_Andres.m
init/KHI_BGfield/: README.md  calc_conductivity.py  config.nml  perturb_efield.py  test_conductivity.py
init/KHI_periodic_SAID/: Efield_BCs_KHI_BG.m  config.nml  perturb_efield.py  perturb_efieldBG.m
init/NM_10t/: README.md  (+1 more)
test/: TestBasic.m  runner.m
tests/: TestBasic.m  runner.m  test_basic.m
(+799 files in other folders)
